--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,8 @@
+<% provide(:title, 'Home') %>
+<div class="center hero-unit">
 <h1>Sample App</h1>
 <p>This is the home page</p>
+<p><%= link_to "Sign Up Now", signup_path, class: 'btn btn-large btn-primary' %></p>
+</div>
+
+<%= link_to image_tag("rails.png", alt: "Rails"), "http://rubyonrails.org/" %>
