--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -111,11 +111,11 @@ input, textarea, select, .uneditable-input {
   width: 100%;
   padding: 10px;
   margin-bottom: 15px;
-  @include box_sizing;
+
 }
 
 #error_explanation {
-  color:#f00;
+  color: #f00;
   ul {
     list-style: none;
     margin: 0 0 18px 0;
@@ -126,8 +126,6 @@ input, textarea, select, .uneditable-input {
   @extend .control-group;
   @extend .error;
 }
-
-
 
 footer {
   margin-top: 45px;
@@ -160,3 +158,48 @@ footer {
   margin-top: 45px;
   @include box_sizing;
 }
+
+/* users index */
+
+.users {
+  list-style: none;
+  margin: 0;
+  li {
+    overflow: auto;
+    padding: 10px 0;
+    border-top: 1px solid $grayLighter;
+    &:last-child {
+      border-bottom: 1px solid $grayLighter;
+    }
+  }
+}
+
+/* microposts */
+
+.microposts {
+  list-style: none;
+
+  margin: 10px 0 0 0;
+
+  li {
+    padding: 10px 0;
+    border-top: 1px solid #e8e8e8;
+  }
+}
+
+.content {
+  display: block;
+}
+
+.timestamp {
+  color: $grayLight;
+}
+
+aside {
+  textarea {
+    height: 100px;
+    margin-bottom: 5px;
+  }
+}
+
+
