--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,19 @@
+<% if signed_in? %>
+<div class="row">
+  <aside class="span4">
+    <section>
+      <%= render 'shared/user_info' %>
+    </section>
+    <section>
+      <%= render 'shared/microposts_form' %>
+    </section>
+  </aside>
+  <div class="span8">
+    <h3>Micropost Feed</h3>
+    <%= render 'shared/feed' %>
+  </div>
+</div>
+<% else %>
 <% provide(:title, 'Home') %>
 <div class="center hero-unit">
 <h1>Sample App</h1>
@@ -6,3 +22,5 @@
 </div>
 
 <%= link_to image_tag("rails.png", alt: "Rails"), "http://rubyonrails.org/" %>
+
+<% end %>
